--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ build-job:
   stage: build
   image: git.wirduzen.zone:5050/kunden/wirduzen-digital-gmbh-10005/clockify-browserextension:latest
   script:
-    - /bin/bash npm install
-    - /bin/bash npm run compile.prod.chrome
-    - /bin/bash npm run compile.prod.firefox
+    - npm install
+    - npm run compile.prod.chrome
+    - npm run compile.prod.firefox
